# dockerfile-generator

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  clickhouse-cluster.xml  docker-compose.yml  pyproject.toml
dockerfile_gen/: config.py  main.py
dockerfile_gen/agent/: graph.py  state.py
dockerfile_gen/agent/nodes/: check_safety.py  execute_dockerfile.py  fetch_base_image.py  generate_dockerfile.py  identify_technologies.py  parse_script.py  reflect_and_fix.py  validate_output.py
dockerfile_gen/agent/tools/: docker_hub.py
dockerfile_gen/llm/: anthropic_provider.py  base.py  factory.py  groq_provider.py  openai_provider.py
tests/: test_check_safety.py  test_config.py  test_docker_hub.py  test_fetch_base_image.py  test_identify_technologies.py  test_parse_script.py  test_reflect_and_fix.py  test_validate_output.py
tests/integration/: Dockerfile.integration  conftest.py  test_integration.py
tests/integration/test_scripts/line_counter/: Dockerfile
tests/integration/test_scripts/llm_safety_bypass/: credential_harvester.py
tests/integration/test_scripts/malicious/: crypto_miner.py  curl_exec.sh  disk_wipe.sh  fork_bomb.sh  reverse_shell.py
tests/integration/test_scripts/matrix_stats/: matrix_stats.py
tests/integration/test_scripts/prompt_injection/: inject_override.py  inject_role_reassign.py  inject_system.sh
